<resources>
    <string name="app_name">Lab 1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Button1">Button 1</string>
    <string name="Button2">Button 2</string>
    <string name="switchTxt">Enable Something</string>
    <string name="LoginID">Login</string>
    <string name="Password">Password</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="dialog_title">Exit Confirm</string>
    <string name="dialog_message">Exit button is pressed. Do you want to really exit? </string>
    <string name="sw_on">Switch is On</string>
    <string name="sw_off">Switch is Off</string>
    <string name="shared_message">My information to share</string>
    <string name="take_message">ListItemsActivity passed: </string>
    <string name="start_chat">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="login_hint">login name</string>
    <string name="login_button">Login</string>
    <string name="content_desc">I am the ImageView.</string>
    <string name="weatherButtonText">Weather Forecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="toolbarButtonText">Test Toolbar</string>
    <string name="about_message">Version 1.0, by ByungSeon Kim</string>
    <string name="alert_title">Do you want to go back?</string>
    <string name="new_message">New Message</string>
    <string name="change_message">Change Message</string>
    <string name="back">Back</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
</resources>
